...
    <!-- DO NOT COPY!  -->

    <string name="app_name" translatable="false">FastHub Debug</string>
    <string name="app_name_full" translatable="false">FastHub for Android</string>
    <string name="linear_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.LinearManager</string>
...
    <string name="pull_request" translatable="false">Pull Request</string>
    <string name="commit" translatable="false">Commit</string>
    <string name="markdown" translatable="false">Markdown</string>
    <string name="gist" translatable="false">Gist</string>
    <string name="back_slash" translatable="false">/</string>
...
    <string name="purchase" translatable="false">Purchase</string>
    <string name="get_all" translatable="false">Purchase All (7.00USD)</string>
    <string name="fasthub_premium_features" translatable="false">FastHub Premium Features</string>
    <string name="secret_code" translatable="false">Promo Code</string>
    <string name="branches" translatable="false">Branches</string>
...
    <string name="in_progress">Loading, please wait…</string>
    <string name="action">Action</string>
    <string name="settings">Settings</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_data">No data available</string>
    <string name="search">Search</string>
...
    <string name="big_file_description">The file is too big to open.\nPress "Yes" to download it instead.</string>
    <string name="viewer">Viewer</string>
    <string name="submit">Submit</string>
    <string name="type_here">Type here</string>
    <string name="description">Description</string>
    <string name="file_name">File name</string>
    <string name="file_name_hint">File name with extension</string>
...
    <string name="report_issue">Report an issue</string>
    <string name="report_issue_here">Having an issue? Report it here</string>
    <string name="about">About</string>
    <string name="notification_settings">Notifications</string>
    <string name="turn_off">Turn off</string>
...
    <string name="mark_notification_title">Disable Notification Read Status</string>
    <string name="mark_notification_summary">Disable marking as read upon clicking a notification.</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">Choose your default theme</string>
    <string name="theme_color_summary">Choose theme accent color</string>
...
    <string name="no_unread_notifications">No unread notifications.</string>
    <string name="my_gists">My Gists</string>
    <string name="changelog">Changelog</string>
    <string name="notifications_hint">Click to open notifications list or swipe to dismiss</string>
    <string name="home_long_click_hint">Long press to navigate to main screen from anywhere</string>
...
    <string name="add_comment">Add comment</string>
    <string name="image_error">Error loading image, please try again.</string>
    <string name="trending">Trending</string>
    <string name="not_really_working">Sort by emojies is not really working due to GitHub limitation</string>
    <string name="scroll_up">Scroll Up</string>
...
    <string name="no_trending">No trending</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
...
    <string name="comments_added_successfully">Comments added successfully</string>
    <string name="clear_search_keywords">Clear Search History</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="include_forks">Include Forks</string>
    <string name="comment_is_too_far_to_paginate">The comment is too far to paginate</string>
...
    <string name="menu_label">Menu</string>
    <string name="commit_file_required">No file changes</string>
    <string name="send_feedback">Send feedback</string>
</resources>

